vest-dsl/test/bad/choice_arrays_type_mismatch.vest
array = u8
fmt(@tag: array) = choose(@tag) {
  [0, 0, 1, 0] => u8,
  [0, 0, 1, 1] => u32,
  [0, 0, 1, 2] => u32,
}
